plugins {
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

//version 'unspecified'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'

    // Apache HttpClient와 HttpMime 버전 맞추기
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
    implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.14'


    implementation group: 'com.google.code.gson', name: 'gson', version: '2.12.1'
    implementation group: 'commons-io', name: 'commons-io', version: '2.18.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.3'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.18.3'

}

test {
    useJUnitPlatform()
}

group 'io.github.bootpay'
apply from: "${rootDir}/scripts/publish-module.gradle"